feat: refactor layout style

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -10,3 +10,8 @@ html {
 #app {
   height: 100%;
 }
+
+body {
+  font-family: -apple-system, 'Noto Sans', roboto, blinkmacsystemfont, 'Segoe UI', 'Helvetica Neue', arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
